--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,32 @@
-.prty-button {
-    background-color: blueviolet;
+/* #### FRONT #### */
+.title-container {
+    /* Text */
+    font-weight: bolder;
+    font-family: monospace;
+    text-align: center;
+    color: white;
+    
+    /* Box */
+    border-radius: 11px;
+    background-color: greenyellow;
+    box-shadow: 0 1px 2px green;
+}
+
+/* #### BACK #### */
+/* Keyboard keys */
+kbd {
+    margin: .2em;
+    box-shadow: 0 2px 3px #2e3440;
+    background-color: #3b4252;
+    border-radius: 3pt;
+    border: 1px solid #a3be8c;
+    padding: .1em .6em;
+    font-family: monospace;
+}
+
+/* Container for shortcuts */
+.shortcut-container {
+    color: #a3be8c;
+    font-size: xx-large;
+    text-align: center !important;
 }
