--- a/src/style.css
+++ b/src/style.css
@@ -1,32 +1,54 @@
+/* Colors based on Nord theme, look there for color options */
+
 /* #### FRONT #### */
+.card {
+    font-family: arial;
+    font-size: 20px;
+    text-align: center;
+    color: black;
+    background-color: white;
+}
+
 .title-container {
     /* Text */
     font-weight: bolder;
     font-family: monospace;
     text-align: center;
+    font-size: 15px;
+    text-shadow: 0.05em 0 rgb(53, 53, 53);
     color: white;
     
     /* Box */
+    padding: .1em .7em;
     border-radius: 11px;
-    background-color: greenyellow;
-    box-shadow: 0 1px 2px green;
+    background-color: #bf616a;
+    
+    /* Placement */
+    margin: 0 auto;
 }
 
 /* #### BACK #### */
 /* Keyboard keys */
 kbd {
-    margin: .2em;
-    box-shadow: 0 2px 3px #2e3440;
-    background-color: #3b4252;
-    border-radius: 3pt;
-    border: 1px solid #a3be8c;
-    padding: .1em .6em;
+    /* Text */
     font-family: monospace;
+    text-shadow: none !important;
+    
+    /* Box */
+    border: 1px solid #a3be8c;
+    border-radius: 3pt;
+    background-color: #3b4252;
+    box-shadow: 0 2px 3px #2e3440;
+    
+    /* Placement */
+    margin: .2em;
+    padding: .1em .6em;
 }
 
 /* Container for shortcuts */
 .shortcut-container {
     color: #a3be8c;
     font-size: xx-large;
+    text-shadow: #2e3440;
     text-align: center !important;
 }
