Make background darker

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
     /* Colors */
     --snow-storm-white: #eceff4;
     --dark-background: #3b4252;
-    --light-background: #4c566a;
+    --light-background: #434c5e;
     --shadow: #2e3440;
     --aurora-green: #a3be8c;
     --aurora-red: #bf616a;
