--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
     --outer-border-color: #4c566a;
     --kbd-background: #3b4252;
     --note-background: #2e3440;
-    --shadow: #434c5e;
+    --kbd-shadow: #4c566a;
     --aurora-green: #a3be8c;
     --aurora-red: #bf616a;
     --divider-color: #4c566a;
@@ -80,7 +80,7 @@ kbd {
     border: 1px solid var(--aurora-green);
     border-radius: 3pt;
     background-color: var(--kbd-background);
-    box-shadow: 0 2px 3px var(--shadow);
+    box-shadow: 0 2px 3px var(--kbd-shadow);
     
     /* Placement */
     margin: .2em;
@@ -91,7 +91,7 @@ kbd {
 .shortcut-container {
     color: var(--aurora-green);
     font-size: x-large;
-    text-shadow: var(--shadow);
+    text-shadow: var(--kbd-shadow);
     text-align: center !important;
     padding-top: 0.7em;
     margin: auto;
