--- a/src/style.css
+++ b/src/style.css
@@ -34,8 +34,11 @@
     --note-max-width: 40em;
     --line-height: 1.6;
 
+    /* Fonts */
+    --mono-font-family: "Roboto Mono", "Source Code Pro", "Ubuntu Mono" monospace;
+
     /* Misc */
-    font-family: arial;
+    font-family: "Roboto", "Inter", "Rubik", "Avenir", "system-ui";
     font-size: 20px;
     text-align: center;
     color: var(--color);
@@ -72,9 +75,12 @@
     /* Sizes */
     --note-max-width: 40em;
     --line-height: 1.6;
+    
+    /* Fonts */
+    --mono-font-family: "Roboto Mono", "Source Code Pro", "Ubuntu Mono" monospace;
 
     /* Misc */
-    font-family: arial;
+    font-family: "Roboto", "Inter", "Rubik", "Avenir", "system-ui";
     font-size: 20px;
     text-align: center;
     color: var(--color);
@@ -101,6 +107,7 @@ code {
     color: var(--code-color) ;
     background-color: var(--code-background-color);
     border-radius: 3px;
+    font-family: var(--mono-font-family);
 }
 
 /* #### FRONT #### */
@@ -111,7 +118,7 @@ code {
 .title-text {
     /* Text */
     font-weight: bolder;
-    font-family: monospace;
+    font-family: var(--mono-font-family);
     text-align: center;
     font-size: 20px;
     text-shadow: 0.05em 0 var(--text-shadow);
@@ -154,7 +161,7 @@ hr.card-divider {
 /* Keyboard keys */
 kbd {
     /* Text */
-    font-family: monospace;
+    font-family: var(--mono-font-family);
     text-shadow: none !important;
     
     /* Box */
