--- a/src/style.css
+++ b/src/style.css
@@ -123,8 +123,7 @@ hr.card-divider {
     border: none;
     border-top: 2px dotted var(--divider-color);
     background-color: transparent;
-    margin: 0;
-    margin-top: 0.4em;
+    margin: 0.4em 0;
 }
 
 /* Container for shortcuts */
