Increase line height for shortcut container

--- a/src/style.css
+++ b/src/style.css
@@ -131,6 +131,7 @@ hr.card-divider {
 .shortcut-container {
     color: var(--kbd-color);
     font-size: x-large;
+    line-height: 2em;
     text-shadow: var(--kbd-shadow);
     text-align: center !important;
     padding: var(--content-text-padding);
